--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ nav {
   letter-spacing: 2px;
   font-size: 15px;
 }
+.active {
+  color: rgb(243, 88, 15);
+  cursor: default;
+}
 .buttonFilter {
   display: flex;
   justify-content: center;
@@ -93,19 +97,19 @@ nav {
 .AboutProductCarusel {
   display: flex;
 }
-.AboutProductCarusel button {
+.CaruselButtons button {
+  margin: 10px;
   background-color: white;
   color: black;
-  border: none;
-  cursor: pointer;
-  width: 100px;
-  height: 20px;
-  align-self: center;
+  border: 1px solid black;
 }
-.AboutProductCarusel button:hover {
+.CaruselButtons button:hover {
   background-color: white;
-  color: red;
+  box-shadow: 1px 1px 3px 1px gray;
+  border: none;
+  font-weight: bolder;
 }
+
 @media all and (max-width: 585px) {
   .buttonFilter button {
     padding: 8px;
